<resources>
    <string name="app_name">eVidyaloka</string>
    <string name="organization_name">Organization Name</string>
    <string name="organization_email">Organization Email</string>
    <string name="organization_phone">Organization Phone</string>
    <string name="organization_address">Organization Address</string>
    <string name="city_district_taluk">City/ District, Taluk</string>
    <string name="taluk">Taluk</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="description_default_partner_admin">Update default Partner Admin details below</string>
    <string name="person_s_email">Person\'s email</string>
    <string name="person_s_contact_number">Person\'s contact number</string>
    <string name="have_an_account_login">Have an account <b><u>LogIn</u></b></string>
    <string name="menu_dashboard_users">Users</string>
    <string name="menu_dashboard_calendar">Calendar</string>
    <string name="menu_dashboard_settings">Settings</string>
    <string name="menu_dashboard_about_us">About Us</string>
    <string name="menu_dashboard_contact_us">Contact Us</string>
    <string name="menu_dashboard_terms_of_usage">Terms of Usage</string>
    <string name="menu_dashboard_privacy_policy">Privacy Policy</string>
    <string name="menu_dashboard_log_issues">Log an issue</string>
    <string name="menu_dashboard_logout">Logout</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="personal_email_id">Person\'s Email</string>
    <string name="personal_contact_no">Person\'s Contact Number</string>
    <string name="personal_details_save_button">Save</string>
    <string name="organizationn_details_full_name">Name</string>
    <string name="organization_email_id">Organization Email ID</string>
    <string name="organization_contact_number">Organization Contact Number</string>
    <string name="tab_personal_details">Personal Details</string>
    <string name="tab_organization_details">Organization Details</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="no_account_register_as_partner">I do not have an account. <b><u>Register as a Partner.</u></b></string>
    <string name="join_the_journey_to_transform_the_education_landscape_of_rural_india">Join the journey to Transform the education landscape of rural India!</string>
    <string name="invalid_credentials">Invalid username / password</string>
    <string name="partner_not_approved">Partner not Approved yet.</string>
    <string name="dsp_under_verification">Your account is under verification process by eVidyaloka.</string>
    <string name="dsp_begin_journey">To begin your journey,\n start by adding your school and users</string>
    <string name="add_your_digital_school">Add your Digital School</string>
    <string name="add_users">Add Users</string>
    <string name="hello">Hi, %1$s!</string>
    <string name="digital_school_name">Digital School Name</string>
    <string name="statement_of_purpose">Statement of purpose</string>
    <string name="statement_of_purpose_optional">Statement of purpose  (optional)</string>
    <string name="add_digital_school">Add Digital School</string>
    <string name="rationale_read_storage">Please grant storage access to enable the app to upload the picture</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="send">Send</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="successful">Successful!</string>
    <string name="passwor_reset_success">Your password has been reset successfully</string>
    <string name="old_pass_new_cant_not_same">Old password and new password can not be same</string>
    <string name="enter_valid_old_pass">Please enter a valid old password</string>
    <string name="invalid_password">Password must contain a minimum of 1 lower case letter[a-z], 1 upperr case letter[A-Z], 1 numeric character [0-9],1 special character: [@ # $ % ^ &amp; + =], (8-32 chars long)</string>
    <string name="invalid_password_new_re_no_match">The new password and confirmation password do not match.</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="card_view_landing_statement">Purpose: </string>
    <string name="card_view_landing_dsm">DSM: </string>
    <string name="card_view_landing_students_enrolled">Students Enrolled</string>
    <string name="card_view_landing_courses_offered">Courses Offered</string>
    <string name="home_my_digital_school">My Digital Schools</string>
    <string name="home_add_digital_school">Add Digital School</string>
    <string name="total_number_of_students">Total number of students</string>
    <string name="grades">Grades</string>
    <string name="assigned_digital_school_manager">Assigned Digital School manager</string>
    <string name="not_assigned">DSM not assigned</string>
    <string name="school_enrolled_on">School enrolled on</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="registration">Registration</string>
    <string name="enter_the_details_to_add_new_school_to_evidyaloka">Add a new School</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="partner">Partner</string>
    <string name="dsm">DSM</string>
    <string name="app_version">App Version </string>
    <string name="bt_submit">Submit</string>
    <string name="bt_submit_another">Submit &amp; Add another</string>
    <string name="bt_save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_line_1">Address</string>
    <string name="role">Role</string>
    <string name="assign_to">Assign To</string>
    <string name="user_added_success">User has been added successfully</string>
    <string name="err_name_already_registered">name already registered</string>
    <string name="err_mobile_number_already_registered">mobile number already registered</string>
    <string name="err_email_already_registered">email already registered</string>
    <string name="hint_search">Search</string>
    <string name="all_users">All Users</string>
    <string name="one_school_assigned">1 School</string>
    <string name="no_of_school_assigned">%d Schools</string>
    <string name="label_schools_assigned">Schools assigned: </string>
    <string name="total_users">" "(%d)</string>
    <string name="tab_personal_info">Personal Information</string>
    <string name="tab_office_info">Office Information</string>
    <string name="address">Address</string>
    <string name="label_fragment_users">Users</string>
    <string name="label_user_details">User Details</string>
    <string name="dialog_assign_digital_school_title">Assigned Digital School</string>
    <string name="school_assigned_success">School has been assigned successfully</string>
    <string name="same_dsm_assigned_to_ds">DSM already assigned to Digital School</string>
    <string name="dialog_close">Close</string>
    <string name="dsm_profile_update_success">DSM Profile updated successfully!</string>
    <string name="invalid_role">Please select valid Role</string>
    <string name="invalid_school">Please select valid School</string>
    <string name="invalid_name">Please add a valid name</string>
    <string name="invalid_description">Please add a valid description</string>
    <string name="invalid_statement_purpose">Please add a valid statement of purpose</string>
    <string name="invalid_first_name">Please add a valid first name</string>
    <string name="invalid_last_name">Please add a valid last name</string>
    <string name="invalid_mail">Please add a valid email</string>
    <string name="invalid_phone">Please add a valid phone number</string>
    <string name="invalid_address">Please add a valid address</string>
    <string name="invalid_district">Please add a valid City / District, Taluk</string>
    <string name="invalid_state">Please add a valid State</string>
    <string name="invalid_taluk">Please add a valid Taluk</string>
    <string name="invalid_district_alone">Please add a valid District</string>
    <string name="invalid_pincode">Please add a valid Pincode</string>
    <string name="invalid_country">Please add a valid Country</string>
    <string name="invalid_org_name">Please add a valid organization name</string>
    <string name="error_mobile_already_registered">mobile number already registered</string>
    <string name="error_email_already_registered">email already registered</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_profile_fragment">Profile</string>
    <string name="organization_name_exists">organization name already registered</string>
    <string name="organization_email_exists">organization email already registered</string>
    <string name="organization_mobile_exists">organization mobile number already registered</string>
    <string name="person_phone_exists">person mobile number already registered</string>
    <string name="update_successfully">Updated successfully</string>
    <string name="label_add_user_fragment">User</string>
    <string name="select_role">Select Role</string>
    <string name="select_digital_school">Select Digital School</string>
    <string name="err_network">Something went wrong. Please try after sometime.</string>
    <string name="error_invalid_credentials">Invalid user credentials</string>
    <string name="error_invalid_old_pass">Invalid old password</string>
    <string name="error_required_field_missing">Required fields are missing</string>
    <string name="error_old_new_not_matching">Old password and New password did not match</string>
    <string name="error_new_pass_min">New password should have minimum 8 characters, at least one
        uppercase and lowercase</string>
    <string name="error_user_not_exist">User does not exist</string>
    <string name="error_unknown">Unknown error please contact Admin</string>
    <string name="hi">Hi</string>
    <string name="student_full_name">Student full name*</string>
    <string name="parent_guardian_name">Parent/ Guardian name*</string>
    <string name="parent_guardian_contact_number">Parent/ Guardian contact number*</string>
    <string name="student_s_date_of_birth">Student\'s Date of birth*</string>
    <string name="student_grade">Student grade*</string>
    <string name="menu_students_enrolled">Students Enrolled</string>
    <string name="menu_all_students">All Students</string>
    <string name="menu_courses">Courses</string>
    <string name="relationship_with_student">Relationship with student</string>
    <string name="students_date_of_birth">Students date of birth</string>
    <string name="gender">Gender</string>
    <string name="student_school">Student school</string>
    <string name="medium_of_study">Medium of study</string>
    <string name="enrolled_course">Enrolled course</string>
    <string name="menu_language">Language</string>
    <string name="students_information">Students Information</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_dashboard_p_lounge">P-Lounge</string>
    <string name="promote_students">Promote Students</string>
</resources>