<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_dashboard_users" />

        <item
            android:id="@+id/nav_locale"
            android:icon="@drawable/ic_menu_locale_dsp"
            android:title="@string/menu_language"
            app:actionViewClass="android.widget.TextView"/>

        <item
            android:id="@+id/nav_p_lounge"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_dashboard_p_lounge" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_dashboard_about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_dashboard_contact_us" />

        <item
            android:id="@+id/nav_faq_dsp"
            android:icon="@drawable/ic_menu_privacy_policy"
            android:title="@string/menu_faq" />

        <item
            android:id="@+id/nav_log_issues"
            android:icon="@drawable/ic_menu_privacy_policy"
            android:title="@string/menu_dashboard_log_issues" />

    </group>

</menu>